# daytime

./: CHANGELOG  Makefile  Makefile.in  README  README.md  command-line-args.c  command-line-args.h  common.c  common.h  config.cache  config.status  configure  configure.ac  configure.in  daytime.1  main.c  sntp.c  sntp.h  sysclock.c  sysclock.h
libUseful/: Socket.h  libUseful.so.5.11
libUseful-2.0/: config.status
libUseful-2.5/: Makefile  Makefile.in  ParseURL.c  file.c  file.h  proctitle.c  socket.c  socket.h
